--- a/app/globals.css
+++ b/app/globals.css
@@ -168,3 +168,21 @@ textarea::placeholder {
     transform: scale(1);
   }
 }
+
+.project-animation-hidden {
+  animation: project-animation-hidden 0.5s ease forwards;
+}
+
+@keyframes project-animation-hidden {
+  0% {
+    transform: scale(1);
+  }
+
+  99% {
+    transform: scale(0);
+  }
+
+  100% {
+    display: none;
+  }
+}
